--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -5,7 +5,8 @@ $textColor: #fff;
 // $mainColor: #2a5ea5;
 
 footer {
-  box-shadow: 5px -5px 5px #c0c0c0;
+  // box-shadow: 5px -5px 5px #c0c0c0;
+  background: transparent;
   padding: 20px;
   grid-area: footer;
   // background-color: $mainColor;
