--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,14 +1,10 @@
-// $mainColor: #3a6b34;
 $mainColor: #333;
-
 $textColor: #333;
-// $mainColor: #2a5ea5;
 
 header {
   grid-area: header;
-  // background-color: $mainColor;
+  background: #fafafa;
   color: $mainColor;
-  box-shadow: 5px 5px 5px #c0c0c0;
   .container {
     display: flex;
     justify-content: space-between;
@@ -34,7 +30,9 @@ header {
         position: relative;
         list-style: none;
         li {
+          position: relative;
           margin-left: 10px;
+          cursor: pointer;
           a {
             font-weight: bold;
             display: block;
@@ -42,55 +40,40 @@ header {
             font-size: 18px;
             color: #333;
             cursor: pointer;
-            padding: 10px;
+            padding: 15px;
+            &.logout,
+            &.signup {
+              background-color: orangered;
+              border-radius: 25px;
+              color: #fafafa;
+              opacity: 0.8;
+              transition: 0.3s;
+              &:hover {
+                opacity: 1;
+              }
+            }
+          }
+          &:not(:last-child)::after {
+            content: "";
+            position: absolute;
+            width: 0%;
+            height: 2px;
+            background-color: orangered;
+            bottom: -5px;
+            left: 0;
+            transition: 0.3s;
+          }
+          &:hover {
+            &::after {
+              width: 100%;
+              opacity: 0.7;
+            }
           }
         }
         .active {
           position: relative;
           color: $mainColor;
           border: 1px solid orangered;
-        }
-        li.login-drop {
-          background-color: orangered;
-          button {
-            padding: 10px;
-            border: none;
-            background-color: transparent;
-            color: #fff;
-            height: 100%;
-            font-size: 18px;
-            cursor: pointer;
-          }
-          ul.drop-content {
-            list-style: none;
-            position: absolute;
-            top: 51px;
-            right: 0;
-            z-index: 1;
-            width: 300px;
-
-            li {
-              border-top: 1px solid #c0c0c0;
-              transition: 0.3s;
-              background-color: $mainColor;
-              opacity: 0.9;
-              display: flex;
-              align-items: center;
-              svg {
-                color: #fff;
-              }
-              &:hover {
-                a {
-                  margin-left: 10px;
-                }
-              }
-              a {
-                color: #fff;
-                transition: .3s;
-                flex: 1;
-              }
-            }
-          }
         }
       }
     }
