--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,14 @@
+:root {
+    --main-color: #333;
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Arial';
 }
+
 
 /* Container Style */
 .container {
@@ -28,7 +33,7 @@ main {
     grid-row: 2;
 }
 
-main > .container {
+main>.container {
     grid-area: main;
     display: grid;
     grid-template-columns: auto 300px;
@@ -41,9 +46,11 @@ main > .container {
     main .container {
         grid-template-columns: auto;
     }
+
     main .container .filter-wrapper {
         grid-row: 1;
     }
+
     main .container .products-wrapper {
         grid-row: 2;
     }
