--- a/client/src/components/CreateProduct/CreateProduct.scss
+++ b/client/src/components/CreateProduct/CreateProduct.scss
@@ -1,33 +1,139 @@
 .create-product {
+  position: relative;
+
+  .alert-create-msg {
+    border: 1px solid #c0c0c0;
+    color: green;
+    padding: 10px;
+    width: fit-content;
+    margin: 10px auto 20px;
+  }
+
   form {
-    textarea {
-      height: 200px;
-      width: 200px;
-      resize: none;
-    }
-    .input-box {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+
+    .form-content {
       display: flex;
-      justify-content: center;
       align-items: center;
-      gap: 50px;
-      margin-top: 20px;
-      img {
-        width: 200px;
-        height: 200px;
-        border-radius: 20px;
-        display: block;
-        margin-top: 20px;
+      justify-content: space-between;
+      padding: 30px;
+      @media (max-width: 991px) {
+        flex-direction: column-reverse;
       }
-    }
-    button {
-      display: block;
-      background-color: var(--main-color);
-      border: none;
-      padding: 10px 20px;
-      margin: 20px auto;
-      cursor: pointer;
-      color: #fafafa;
-      border-radius: 20px;
+
+      .error {
+        color: rgb(221, 54, 54);
+        text-transform: lowercase;
+        float: right;
+      }
+      .col-1 {
+        width: 50%;
+        text-align: center;
+        @media (max-width: 991px) {
+          width: 100%;
+        }
+        .input-box {
+          margin: 0 auto 20px;
+          width: 400px;
+          .input-content {
+            margin: auto;
+            display: flex;
+            justify-content: space-between;
+            @media (max-width: 991px) {
+              flex-direction: column;
+            }
+            label {
+              font-weight: bold;
+              text-align: left;
+            }
+            .input {
+              // width: fit-content;
+              display: flex;
+              flex-direction: column;
+            }
+            textarea {
+              height: 100px;
+              resize: none;
+            }
+            input,
+            textarea {
+              margin: auto;
+              width: 100%;
+              padding: 10px;
+              border: none;
+              box-shadow: 2px 2px 2px #c0c0c0;
+              transition: 0.3s;
+              @media (min-width: 991px) {
+                width: 300px;
+              }
+              &:focus {
+                outline: none;
+                border: none;
+                box-shadow: 2px 2px 10px #c0c0c0;
+                caret-color: orangered;
+                padding-left: 15px;
+                &::placeholder {
+                  color: transparent;
+                }
+              }
+            }
+          }
+        }
+        .submit {
+          border: none;
+          width: 300px;
+          margin: auto;
+          text-align: center;
+          // float: right;
+          text-transform: uppercase;
+          background-color: #333;
+          color: white;
+          padding: 15px;
+          margin: 0 auto 20px;
+          cursor: pointer;
+          border-radius: 5px;
+          @media (max-width: 991px) {
+            float: none;
+          }
+        }
+      }
+      .col-2 {
+        width: 50%;
+        text-align: center;
+        @media (max-width: 991px) {
+          width: 100%;
+        }
+        input {
+          display: none;
+        }
+        button {
+          border: none;
+          width: 120px;
+          background-color: #333;
+          color: white;
+          padding: 15px;
+          margin: 0 auto 20px;
+          cursor: pointer;
+          border-radius: 5px;
+        }
+        .img-error {
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          img {
+            width: 200px;
+            height: 200px;
+            border: 1px solid #c0c0c0;
+            border-radius: 50%;
+            box-shadow: 2px 2px 5px #c0c0c0;
+            object-fit: contain;
+            cursor: pointer;
+            margin: auto;
+          }
+        }
+      }
     }
   }
 }
