--- a/client/src/components/SignUp/SginUp.scss
+++ b/client/src/components/SignUp/SginUp.scss
@@ -2,26 +2,43 @@
 // $mainColor: #3a6b34;
 $mainColor: #333;
 
-
-
 .sign {
   position: relative;
   user-select: none;
-  
+
   form.sign-content {
-    position: absolute;
+    position: relative;
     top: 50%;
     transform: translatey(-50%);
     width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-
-    border-radius: 5px;
     padding: 20px;
-    .sign-box {
-      width: 500px;
 
+    .sign-box {
+      width: 40%;
+
+      .add-photo {
+        .btn-and-img {
+          display: flex;
+          justify-content: space-evenly;
+          align-items: center;
+          button {
+            background-color: white;
+            color: #333;
+            box-shadow: 2px 2px 5px #c0c0c0;
+          }
+          img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            box-shadow: 2px 2px 5px #c0c0c0;
+            object-fit: contain;
+            cursor: pointer;
+          }
+        }
+      }
       .personal-info {
         display: flex;
         // justify-content: center;
@@ -34,11 +51,24 @@ $mainColor: #333;
           width: 100%;
         }
       }
-      > input {
-        display: block;
-        width: 100%;
+      .password-input {
+        display: flex;
+        align-items: center;
+        position: relative;
+        span.eye {
+          display: block;
+          position: absolute;
+          right: 0;
+          border-left: 1px solid #c0c0c0;
+          padding: 10px;
+          svg:last-child {
+            color: #4267b2;
+          }
+        }
       }
       input {
+        width: 100%;
+        display: block;
         box-shadow: 2px 2px 5px #c0c0c0;
         background-color: transparent;
         color: #000;
