--- a/client/src/css/Header/Header.css
+++ b/client/src/css/Header/Header.css
@@ -1,6 +1,5 @@
 header {
   grid-area: header;
-  background: #fafafa;
   color: #333;
 }
 header .container {
@@ -25,15 +24,21 @@ header .container > a h1 svg {
 }
 header .container nav ul.main-list {
   display: flex;
+  align-items: center;
   position: relative;
   list-style: none;
 }
-header .container nav ul.main-list li {
+header .container nav ul.main-list > li {
   position: relative;
   margin-left: 10px;
   cursor: pointer;
 }
-header .container nav ul.main-list li a {
+header .container nav ul.main-list > li .active {
+  position: relative;
+  color: #333;
+  border: 1px solid orangered;
+}
+header .container nav ul.main-list > li a {
   font-weight: bold;
   display: block;
   text-decoration: none;
@@ -42,17 +47,17 @@ header .container nav ul.main-list li a {
   cursor: pointer;
   padding: 15px;
 }
-header .container nav ul.main-list li a.logout, header .container nav ul.main-list li a.signup {
+header .container nav ul.main-list > li a.logout, header .container nav ul.main-list > li a.signup {
   background-color: orangered;
   border-radius: 25px;
   color: #fafafa;
   opacity: 0.8;
   transition: 0.3s;
 }
-header .container nav ul.main-list li a.logout:hover, header .container nav ul.main-list li a.signup:hover {
+header .container nav ul.main-list > li a.logout:hover, header .container nav ul.main-list > li a.signup:hover {
   opacity: 1;
 }
-header .container nav ul.main-list li:not(:last-child)::after {
+header .container nav ul.main-list > li:not(:last-child)::after {
   content: "";
   position: absolute;
   width: 0%;
@@ -62,12 +67,55 @@ header .container nav ul.main-list li:not(:last-child)::after {
   left: 0;
   transition: 0.3s;
 }
-header .container nav ul.main-list li:hover::after {
+header .container nav ul.main-list > li:hover::after {
   width: 100%;
   opacity: 0.7;
 }
-header .container nav ul.main-list .active {
-  position: relative;
+header .container nav ul.main-list li.drop-menu > div {
+  font-weight: bold;
+  display: block;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.3s;
+}
+header .container nav ul.main-list li.drop-menu > div:hover {
+  transform: scale(1.1);
+}
+header .container nav ul.main-list li.drop-menu > div img.profile-img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+header .container nav ul.main-list li.drop-menu > ul.drop-list {
+  width: 300px;
+  position: absolute;
+  top: 53px;
+  right: 0;
+  list-style-type: none;
+  background-color: #fff;
+  box-shadow: 2px 2px 5px #c0c0c0;
+  border-radius: 6px;
+  z-index: 1;
+}
+header .container nav ul.main-list li.drop-menu > ul.drop-list::after {
+  content: "";
+  position: absolute;
+}
+header .container nav ul.main-list li.drop-menu > ul.drop-list > li {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  transition: 0.3s;
+}
+header .container nav ul.main-list li.drop-menu > ul.drop-list > li:not(:last-child) {
+  border-bottom: 1px solid #c0c0c0;
+}
+header .container nav ul.main-list li.drop-menu > ul.drop-list > li:hover {
+  margin-left: 10px;
+}
+header .container nav ul.main-list li.drop-menu > ul.drop-list a {
   color: #333;
-  border: 1px solid orangered;
+  cursor: pointer;
 }
