--- a/client/src/css/Login/Login.css
+++ b/client/src/css/Login/Login.css
@@ -28,6 +28,11 @@
   color: #333;
   margin-bottom: 20px;
 }
+.login form.login-content .login-box {
+  border: 1px solid #c0c0c0;
+  border-radius: 5px;
+  padding: 20px;
+}
 .login form.login-content .login-box .input-feild {
   display: flex;
   align-items: center;
