--- a/client/src/pages/Profile/Profile.scss
+++ b/client/src/pages/Profile/Profile.scss
@@ -72,15 +72,14 @@
         h4 {
           margin-bottom: 20px;
         }
-        p {
-          display: flex;
-          justify-content: space-between;
-          //   gap: 50px;
-          align-items: center;
-          svg {
-            color: orangered;
-            cursor: pointer;
-            margin-right: 80px;
+        input {
+          padding: 10px;
+          border: 1px solid #c0c0c0;
+          border-radius: 5px;
+          caret-color: orangered;
+          &:focus {
+            outline: none;
+            box-shadow: 0 2px 5px #c0c0c0;
           }
         }
       }
