--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -2,141 +2,135 @@ $mainColor: #333;
 $textColor: #333;
 
 header {
-  grid-area: header;
-  color: $mainColor;
-  .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-    > a {
-      text-transform: uppercase;
-      color: $mainColor;
-      text-decoration: none;
-      h1 {
-        font-family: "operator mono";
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        svg {
-          color: orangered;
-        }
-      }
-    }
-    nav {
-      //! main ul
-      ul.main-list {
-        display: flex;
-        align-items: center;
-        position: relative;
-        list-style: none;
-        //! all list
-        > li {
-          position: relative;
-          margin-left: 10px;
-          cursor: pointer;
-          .active {
-            position: relative;
-            color: $mainColor;
-            border: 1px solid orangered;
-          }
-          a {
-            font-weight: bold;
-            display: block;
-            text-decoration: none;
-            font-size: 18px;
-            color: #333;
-            cursor: pointer;
-            padding: 15px;
-            &.logout,
-            &.signup {
-              background-color: orangered;
-              border-radius: 25px;
-              color: #fafafa;
-              opacity: 0.8;
-              transition: 0.3s;
-              &:hover {
-                opacity: 1;
-              }
-            }
-          }
-          &:not(:last-child)::after {
-            content: "";
-            position: absolute;
-            width: 0%;
-            height: 2px;
-            background-color: orangered;
-            bottom: -5px;
-            left: 0;
-            transition: 0.3s;
-          }
-          &:hover {
-            &::after {
-              width: 100%;
-              opacity: 0.7;
-            }
-          }
-        }
-        //! drop down
-        li.drop-menu {
-          // position: relative;
-
-          > div {
-            font-weight: bold;
-            display: block;
-            font-size: 18px;
-            color: #fff;
-            cursor: pointer;
-            // padding: 15px;
-            // background-color: orangered;
-            // display: flex;
-            // align-items: center;
-            // justify-content: center;
-            transition: 0.3s;
-            &:hover {
-              transform: scale(1.1);
-            }
-            img.profile-img {
-              width: 50px;
-              height: 50px;
-              border-radius: 50%;
-              object-fit: cover;
-            }
-          }
-          > ul.drop-list {
-            width: 300px;
-            position: absolute;
-            top: 53px;
-            right: 0;
-            list-style-type: none;
-            background-color: #fff;
-            box-shadow: 2px 2px 5px #c0c0c0;
-            border-radius: 6px;
-            z-index: 1;
-            &::after {
-              content: "";
-              position: absolute;
-            }
-            > li {
-              // padding: 10px;
-              display: flex;
-              flex-wrap: wrap;
-              align-items: center;
-              transition: 0.3s;
-              &:not(:last-child) {
-                border-bottom: 1px solid #c0c0c0;
-              }
-              &:hover {
-                margin-left: 10px;
-              }
-            }
-            a {
-              color: #333;
-              cursor: pointer;
-            }
-          }
-        }
-      }
-    }
-  }
+	grid-area: header;
+	color: $mainColor;
+	.container {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		height: 100%;
+		> a {
+			text-transform: uppercase;
+			color: $mainColor;
+			text-decoration: none;
+			h1 {
+				font-family: 'operator mono';
+				display: flex;
+				align-items: center;
+				gap: 10px;
+				svg {
+					color: orangered;
+				}
+			}
+		}
+		nav {
+			//! main ul
+			ul.main-list {
+				display: flex;
+				align-items: center;
+				position: relative;
+				list-style: none;
+				//! all list
+				> li {
+					position: relative;
+					margin-left: 10px;
+					cursor: pointer;
+					.active {
+						position: relative;
+						color: $mainColor;
+						border: 1px solid orangered;
+					}
+					a {
+						font-weight: bold;
+						display: block;
+						text-decoration: none;
+						font-size: 18px;
+						color: #333;
+						cursor: pointer;
+						padding: 15px;
+						&.logout,
+						&.signup {
+							background-color: orangered;
+							border-radius: 25px;
+							color: #fafafa;
+							opacity: 0.8;
+							transition: 0.3s;
+							&:hover {
+								opacity: 1;
+							}
+						}
+					}
+					&:not(:last-child)::after {
+						content: '';
+						position: absolute;
+						width: 0%;
+						height: 2px;
+						background-color: orangered;
+						bottom: -5px;
+						left: 0;
+						transition: 0.3s;
+					}
+					&:hover {
+						&::after {
+							width: 100%;
+							opacity: 0.7;
+						}
+					}
+				}
+				//! drop down
+				li.drop-menu {
+					> div {
+						font-weight: bold;
+						display: block;
+						font-size: 18px;
+						color: #fff;
+						cursor: pointer;
+						transition: 0.3s;
+						&:hover {
+							transform: scale(1.1);
+						}
+						img.profile-img {
+							width: 50px;
+							height: 50px;
+							border-radius: 50%;
+							object-fit: contain;
+						}
+					}
+					> ul.drop-list {
+						width: 300px;
+						position: absolute;
+						top: 53px;
+						right: 0;
+						list-style-type: none;
+						background-color: #fff;
+						box-shadow: 2px 2px 5px #c0c0c0;
+						border-radius: 6px;
+						z-index: 1;
+						&::after {
+							content: '';
+							position: absolute;
+						}
+						> li {
+							// padding: 10px;
+							display: flex;
+							flex-wrap: wrap;
+							align-items: center;
+							transition: 0.3s;
+							&:not(:last-child) {
+								border-bottom: 1px solid #c0c0c0;
+							}
+							&:hover {
+								margin-left: 10px;
+							}
+						}
+						a {
+							display: block;
+							color: #333;
+							cursor: pointer;
+						}
+					}
+				}
+			}
+		}
+	}
 }
