--- a/client/src/components/SignUp/SginUp.scss
+++ b/client/src/components/SignUp/SginUp.scss
@@ -22,13 +22,9 @@ $mainColor: #333;
       .add-photo {
         .btn-and-img {
           display: flex;
-          justify-content: space-evenly;
+          flex-direction: column;
           align-items: center;
-          button {
-            background-color: white;
-            color: #333;
-            box-shadow: 2px 2px 5px #c0c0c0;
-          }
+          gap: 10px;
           img {
             width: 100px;
             height: 100px;
