--- a/client/src/css/Header/Header.css
+++ b/client/src/css/Header/Header.css
@@ -86,7 +86,7 @@ header .container nav ul.main-list li.drop-menu > div img.profile-img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  object-fit: cover;
+  object-fit: contain;
 }
 header .container nav ul.main-list li.drop-menu > ul.drop-list {
   width: 300px;
@@ -116,6 +116,7 @@ header .container nav ul.main-list li.drop-menu > ul.drop-list > li:hover {
   margin-left: 10px;
 }
 header .container nav ul.main-list li.drop-menu > ul.drop-list a {
+  display: block;
   color: #333;
   cursor: pointer;
 }
