--- a/client/src/css/SignUp/SginUp.css
+++ b/client/src/css/SignUp/SginUp.css
@@ -17,13 +17,9 @@
 }
 .sign form.sign-content .sign-box .add-photo .btn-and-img {
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
   align-items: center;
-}
-.sign form.sign-content .sign-box .add-photo .btn-and-img button {
-  background-color: white;
-  color: #333;
-  box-shadow: 2px 2px 5px #c0c0c0;
+  gap: 10px;
 }
 .sign form.sign-content .sign-box .add-photo .btn-and-img img {
   width: 100px;
